# information-safety

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: launch_actions_runner.sh
docs/: measurement-definitions.md
information_safety/: __init__.py  attack_bits.py  conftest.py  experiment.py  main.py  main_test.py
plots/: bits_distribution.py  bits_vs_asr.py  bits_vs_asr_defended_wmdp_evilmath.py  bits_vs_asr_olmo_strategies.py  bits_vs_asr_openweight.py  bits_vs_asr_openweight_all_datasets.py  bits_vs_asr_openweight_combined.py  bits_vs_asr_smollm.py  bits_vs_asr_strategies.py  chinchilla_combined_vs_asr_openweight_all_datasets.py  chinchilla_pareto_decomposition.py  flops_plus_bits_vs_asr_openweight_all_datasets.py  flops_vs_asr_openweight.py  flops_vs_asr_openweight_all_datasets.py  hernandez_combined_vs_asr_openweight_all_datasets.py  tokens_combined_vs_asr_defended_wmdp_evilmath.py  tokens_combined_vs_asr_openweight_all_datasets.py  tokens_pareto_decomposition.py  utils.py
scripts/: _asr_backfill_common.py  _trc_common.py  audit_queue_dedup.py  backfill_gcg_pareto_extraction.py  bootstrap_trc_adversariallm.py  bootstrap_trc_data.py  bootstrap_trc_information_safety.py  build_adversariallm_behaviors.py  build_attack_queue.py  build_defense_data.py  build_evilmath_refusal_source.py  build_job_queue.py  check_results.py  evaluate_evilmath.py  evaluate_harmbench.py  evaluate_mmlu.py  evaluate_strongreject.py  evaluate_wmdp.py  export_checkpoint_to_hf.py  extract_adversariallm_attacks.py  generate_advbench_completions.py  invalidate_results.py  job_pool_worker.py  merge_asr_backfill.py  merge_synced_results.py  migrate_eval_pool_to_trc.py  migrate_pool_to_nibi.py  migrate_pool_to_trc.py  null_asr.py  null_deferred_eval_rerun.py  plot_attack_results.py  plot_bits_vs_asr.py  purge_strongreject_attack_artifacts.py  push_artifacts_to_hf.py  reap_stale_claims.py  rebuild_merged_jsonl.py  recover_attack_pipeline.py  run_eval_pool.py  run_jailbreak_benchmark.py  run_one_attack.sh  (+8 more)
slurm/: TRC.md  _eval-shard-merge.sh  _eval-shard.sh  attack-adversariallm.sh  attack-gcg.sh  bootstrap-remote-cluster.sh  build-evilmath-refusal-source.sh  check-cluster-ssh.sh  eval-sweep-parallel.sh  eval-sweep-results.sh  evaluate-harmbench.sh  evaluate-mmlu-bench.sh  evaluate-mmlu.sh  evaluate-strongreject.sh  export-safety-pair.sh  push-defenses-to-hf.sh  run-eval-pool.sh  (+19 more)
(+252 files in other folders)
