[project]
name = "information-safety"
dynamic = ["version"]
description = "Information Safety: A follow-up study on information-theoretic approaches to AI safety."
authors = [
    { name = "Tomás Vergara Browne", email = "tomas.vergarabrowne@mila.quebec" },
]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "wandb>=0.17.6",
    "lightning>=2.4.0",
    "rich>=13.7.1",
    "tqdm>=4.66.5",
    "hydra-zen==0.13.1rc1",
    "matplotlib>=3.9.2",
    "optree>=0.15.0",
    "transformers>=4.57.3",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "datasets>=2.21.0",
    # Hydra / submitit plugins
    "hydra-colorlog>=1.2.0",
    "remote-slurm-executor",
    "hydra-auto-schema>=0.0.7",
    "hydra-orion-sweeper>=1.6.4 ; python_full_version < '3.11'",
]
readme = "README.md"
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    "mktestdocs>=0.2.2",
    "pre-commit<4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest-regressions>=2.5.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-testmon>=2.1.1",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
    "tensor-regression>=0.0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests", "information_safety"]
norecursedirs = [".venv", "third_party"]

# Required to use torch deterministic mode.
env = ["CUBLAS_WORKSPACE_CONFIG=:4096:8"]
addopts = [
    "--doctest-modules",
]
markers = [
    "incremental: incremental testing support",
    "parametrize_when_used: Parametrize a test only when the argument is used.",
]

[tool.pyright]
include = ["information_safety"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 99
indent-width = 4
lint.select = ["E4", "E7", "E9", "F", "I", "UP"]
extend-exclude = ["third_party"]

[tool.uv]
managed = true

[tool.uv.sources]
remote-slurm-executor = { git = "https://github.com/lebrice/remote-slurm-executor", branch = "master" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["information_safety"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
